# gepEngine

./: CMakeLists.txt  README.md
contrib/include/glm/detail/: setup.hpp
docs/: Diagram1.dia  TODO.txt
shaders/: simple  simpleTex
src/gepEngine/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  GepEngine.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  MaterialAttribute.cpp  MaterialAttribute.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h
src/rend/: Mesh.cpp  Shader.cpp
src/sandbox/: main.cpp
